# plan-os

./: 00-INDEX.md  01-RESEARCH-AND-ARCHITECTURE-DECISION.md  02-VOCABULARY-AND-FRAMEWORKS.md  03-LIFECYCLE-AND-REVIEW-SYSTEM.md  04-KNOWLEDGE-ARCHITECTURE-AND-CONTEXT-ENGINEERING.md  05-SOP-GOVERNANCE-MAINTENANCE.md  06-SELF-AUDIT.md  README.md  SKILL.md  SYSTEM-PROMPT.md  pos.py  pyproject.toml
_examples/: 00-INDEX.md  EXAMPLE-bug-file-node-not-rectangle.md  EXAMPLE-decision-log.md  EXAMPLE-feature-dom-tree-renderer.md  EXAMPLE-lifecycle-walkthrough-bug-0012.md  EXAMPLE-project-graps.md  EXAMPLE-task-fix-edge-rendering.md
issue/: new-id-claim-orhpan-file.md  plan-os-tooling-and-spec-friction.md
projects/plan-os-maintenance/: 00-INDEX.md  09-decision-log.md
projects/plan-os-maintenance/00-backlog/: 00-INDEX.md  backlog-bugs.md  backlog-features.md  backlog-refactor-enhancment.md
projects/plan-os-maintenance/08-refactor-and-enhancment/: 00-INDEX.md  enh-0001-pos-py-packaging-test-suite.md
templates/: 00-INDEX.md  TEMPLATE-backlog.md  TEMPLATE-bugfix-enhancement-refactor.md  TEMPLATE-decision-log.md  TEMPLATE-feature.md  TEMPLATE-lifecycle-tracking.md  TEMPLATE-project.md  TEMPLATE-review-checklist.md  TEMPLATE-task.md
tests/: conftest.py  test-degraph.py  test-new-id.py  test-packaging.py  test-validate.py
